# multi-agent-bakuhu

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ja.md  SECURITY.md  dashboard.md  first_setup.sh  install.bat  requirements.txt  setup.sh  shutsujin_departure.sh
.claude/: settings.json  settings.local.json
.gemini/: GEMINI.md  settings.json
.github/: CODEOWNERS  copilot-instructions.md
android/: .gitignore  README.md  README_ja.md  build.gradle.kts  gradle.properties  settings.gradle.kts
config/: ntfy_auth.env.sample  settings.yaml.example
context/: README.md  feature-shogun.md
docs/: identity_isolation_v3_report.md  philosophy.md
instructions/: ashigaru.md  denrei.md  gunshi.md  gunshi_upstream_ref.md  karo.md  kyakusho.md  metsuke.md  shinobi.md  shogun.md
lib/: agent_status.sh  cli_adapter.sh  ntfy_auth.sh
memory/: MEMORY.md.sample
queue-viewer/: index_queue.py  main.py  pyproject.toml
queue-viewer/kb/: __init__.py  indexer.py  indexer_fts_only.py  models.py  search.py  search_fts_only.py
queue-viewer/kb/parsers/: __init__.py  markdown.py  yaml.py
queue-viewer/kb/storage/: __init__.py  fts_store.py  lancedb_store.py  sqlite_vec_store.py
queue-viewer/routers/: kb.py
queue-viewer/static/: style.css
queue-viewer/templates/: base.html  file.html  index.html  search_results.html
queue-viewer/tests/: __init__.py  test_api.py  test_fts_only.py  test_markdown.py  test_search.py  test_storage.py  test_yaml.py
saytask/: streaks.yaml.sample
(+308 files in other folders)
