[project]
name = "queue-viewer"
version = "0.1.0"
description = "multi-agent-bakuhu queue directory web viewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "markdown>=3.7",
    "pygments>=2.18.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "lancedb>=0.29.2",
    "sentence-transformers>=5.2.2",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = ["E501"]  # line too long (formatter handles)

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
